# cloud_agent

./: .gitignore  IAM_Skills.md  PROJECT_DOCUMENTATION.md
agent/: .bedrock_agentcore.yaml  .env.example  README.md  invoke_agent.py  pyproject.toml  render.py  streaming_server.py
agent/.bedrock_agentcore/cloudAgent/: Dockerfile
agent/skills/cost-analysis/: SKILL.md
agent/skills/log-exploration/: SKILL.md
agent/src/: local_http.py  main.py  runtime_invoke.py
agent/src/graph/: __init__.py  build.py  nodes.py  state.py
agent/src/mcp_client/: client.py
agent/src/memory/: __init__.py
agent/src/model/: __init__.py  load.py
agent/src/scoping/: __init__.py  domains.py
agent/src/skills/: __init__.py  load.py  router.py  tool_filter.py
agent/src/tools/: __init__.py  ask_user.py  tool_output_unwrap.py  visualization.py  viz_normalizer.py
agent/src/viz_pipeline/: __init__.py  cost_chart_spec.py  normalize_llm.py  normalize_python.py  pipeline.py  render.py  schemas.py  transform.py
docs/: RUN_CHAT_AND_UI.md
lambdas/: gateway_inline_schema.json
lambdas/unified_tools/: README.md  handler.py  iam-policy-unified-tools.json
lambdas/unified_tools/boto3-1.42.68.dist-info/: RECORD
lambdas/unified_tools/botocore-1.42.68.dist-info/: RECORD
streamlit-ui/: README.md  app.py  bedrock_direct.py  requirements.txt  streamlit_client.py
ui/: README.md  drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml
ui/components/: agent-json-result.tsx
ui/components/chat/: greeting.tsx  (+4 more)
ui/hooks/: use-active-chat.tsx
ui/lib/: agentcore-client.ts  constants.ts  types.ts
(+9 files in other folders)
